--- a/app/src/main/res/layout/item_home_calendar.xml
+++ b/app/src/main/res/layout/item_home_calendar.xml
@@ -13,13 +13,86 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
+
         <TextView
-            android:text="This is test Text!"
+            android:id="@+id/calendar_year_month_text"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:text="2020년 01월"
             android:textSize="25sp"
             android:textStyle="bold"
             android:gravity="center_vertical|start"
-            android:layout_marginStart="20dp" />
+            android:layout_marginStart="20dp"
+            style="@style/TextViewStyle"/>
+
+        <View
+            android:id="@+id/div"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            style="@style/LineView"/>
+
+        <LinearLayout
+            android:id="@+id/calendar_header"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <TextView android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:text="SUN"
+                style="@style/TextViewStyle"/>
+            <TextView android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:text="MON"
+                style="@style/TextViewStyle"/>
+            <TextView android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:text="TUE"
+                style="@style/TextViewStyle"/>
+            <TextView android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:text="WED"
+                style="@style/TextViewStyle"/>
+            <TextView android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:text="THU"
+                style="@style/TextViewStyle"/>
+            <TextView android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:text="FRI"
+                style="@style/TextViewStyle"/>
+            <TextView android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:text="SAT"
+                style="@style/TextViewStyle"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/calendar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/calendar_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:spanCount="7"
+                android:adjustViewBounds="true"
+                app:layout_constrainedHeight="true"
+                tools:listitem="@layout/item_home_calendar_date"/>
+        </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
