--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,4 +13,6 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="TextViewStyle" parent="Theme.MyCalendar006"></style>
+    <style name="LineView" parent="Theme.MyCalendar006"></style>
 </resources>
