--- a/app/src/main/res/layout/item_home_calendar_date.xml
+++ b/app/src/main/res/layout/item_home_calendar_date.xml
@@ -16,4 +16,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+    <View
+        android:id="@+id/item_calendar_dot_view"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        app:layout_constraintTop_toBottomOf="@id/item_calendar_date_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
