--- a/app/src/main/res/layout/item_home_calendar_date.xml
+++ b/app/src/main/res/layout/item_home_calendar_date.xml
@@ -1,26 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/item_calendar_date_text"
+    <LinearLayout
+        android:id="@+id/item_calendar_date_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="1"
-        android:textSize="20sp"
-        android:gravity="center_horizontal|top"
-        style="@style/TextViewStyle"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-    <View
-        android:id="@+id/item_calendar_dot_view"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
-        app:layout_constraintTop_toBottomOf="@id/item_calendar_date_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/item_calendar_date_text"
+            style="@style/TextViewStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal|top"
+            android:text="1"
+            android:textSize="20sp" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/item_calendar_datelist_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            app:layout_constrainedHeight="true"
+            tools:listitem="@layout/item_home_calendar_datelist" />
+    </LinearLayout>
+
+
+    <!--    <View-->
+<!--        android:id="@+id/item_calendar_dot_view"-->
+<!--        android:layout_width="10dp"-->
+<!--        android:layout_height="10dp"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/item_calendar_date_text"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"/>-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
