--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="numberpicker_text_size">40sp</dimen>
     <dimen name="button_style_text_size">20sp</dimen>
     <dimen name="timer_text_style_text_size">60sp</dimen>
+    <dimen name="bottomNav">60sp</dimen>
 </resources>
